--- a/templates/questions.html
+++ b/templates/questions.html
@@ -17,16 +17,6 @@
             <div id="logo-div"></div>
             <div id="app-name">Stack Overflow lite</div>
         </div>
-        <div class="log-bar">
-            <ul list-style-type="none">
-                <li>
-                    <a href="./signin.html">Sign in</a>
-                </li>
-                <li>
-                    <a href="./signup.html">Sign up</a>
-                </li>
-            </ul>
-        </div>
     </div>
     <div class="mini-top-bar">
         <div class="home">
@@ -56,7 +46,8 @@
                 </div>
             </div>
             <div class="right-content">
-                <div class="quest-header">Top Questions</div>
+                <div class="quest-header">All Questions</div>
+                <div id= "all-quest-num">4 Questions</div>
                 <div class="quest-container">
                     <h2><a href="./question.html">Delete and EDIT API's using expressJS</a></h2>
                     <p>I created DELETE API and in the callback function i have written .remove function to delete a product if the id i have given is present.But when i am giving incorrect input, the result is receiving ...</p>
