-create landing for logged in user -modifying page designs for visitors and logged in user -implementing page links to show page work flow

--- a/templates/ask.html
+++ b/templates/ask.html
@@ -19,23 +19,22 @@
         </div>
     </div>
     <div class="mini-top-bar">
-        <div class="home">
-            <i class="material-icons">
-                <a href="./index.html">home</a>
-            </i>
-        </div>
     </div>
     <div class="main-content">
-            <div class="main-content-left">
-                    <div class= "left-mini">
-                        <div class="public"><i class="material-icons">public</i></div>
-                        <a href= "./questions.html">StackOverflow</a>
-                    </div>
-                    <div class= "left-mini">
-                            <div class="public"><i class="material-icons">person</i></div>
-                            <a href= "./profile.html">Profile</a>
-                    </div>
-                </div> 
+        <div class="main-content-left">
+            <div class="left-mini">
+                <div class="public">
+                    <i class="material-icons">home</i>
+                </div>
+                <a href="./home.html" class="active">Home</a>
+            </div>
+            <div class="left-mini">
+                <div class="public">
+                    <i class="material-icons">public</i>
+                </div>
+                <a href="./questions.html">StackOverflow</a>
+            </div>
+        </div>
         <div class="main-content-right">
             <div class="right-header">
                 <form class="home-quest">
@@ -44,13 +43,13 @@
             </div>
             <div class="right-content">
                 <div class="quest-header">Ask a question</div>
-                <div class= "ans-header">Title</div>
-                <div id= "ans-title">
-                <input type="text" class="text" placeholder="Your title goes here">
-                </div>                
-                <div class= "ans-header">Body</div>
-                <textarea id= "text-area"></textarea>
-                <div class= "btn-post-box">Post Your Question</div>
+                <div class="ans-header">Title</div>
+                <div id="ans-title">
+                    <input type="text" class="text" placeholder="Your title goes here">
+                </div>
+                <div class="ans-header">Body</div>
+                <textarea id="text-area"></textarea>
+                <div class="btn-post-box">Post Your Question</div>
 
             </div>
         </div>
