--- a/templates/home.html
+++ b/templates/home.html
@@ -27,6 +27,8 @@
         </div>
     </div>
     <div class="mini-top-bar">
+        <div class="home ">
+        </div>
     </div>
     <div class="main-content">
         <div class="main-content-left">
@@ -40,9 +42,9 @@
                 <div class="public">
                     <i class="material-icons">public</i>
                 </div>
-                <a href="./questions.html">StackOverflow</a>
+                <a href="./questions.html">All Questions</a>
             </div>
-      
+
         </div>
         <div class="main-content-right">
             <div class="right-header">
@@ -56,8 +58,7 @@
                 </div>
             </div>
             <div class="right-content">
-                <div class="quest-header">All Questions</div>
-                <div id="all-quest-num">4 Questions</div>
+                <div class="quest-header">Top Questions</div>
                 <div class="quest-container">
                     <h2>
                         <a href="./question.html">Delete and EDIT API's using expressJS</a>
