--- a/templates/index.html
+++ b/templates/index.html
@@ -29,22 +29,20 @@
         </div>
     </div>
     <div class="mini-top-bar">
-        <div class="home">
-            <i class="material-icons">
-                <a href="./index.html">home</a>
-            </i>
+        <div class="home "> 
         </div>
     </div>
     <div class="main-content">
         <div class="main-content-left">
             <div class= "left-mini">
-                <div class="public"><i class="material-icons">public</i></div>
-                <a href= "./questions.html">StackOverflow</a>
+                    <div class="public"><i class="material-icons">home</i></div>
+                    <a href="./index.html" class="active">Home</a>
             </div>
             <div class= "left-mini">
-                    <div class="public"><i class="material-icons">person</i></div>
-                    <a href= "./profile.html">Profile</a>
+                <div class="public"><i class="material-icons">public</i></div>
+                <a href= "./signin.html">All Questions</a>
             </div>
+           
         </div>    
         <div class="main-content-right">
             <div class="right-header">
@@ -52,25 +50,25 @@
                     <input type="text" id="search" placeholder="search">
                 </form>
                 <div class="btn-ask-box">
-                    <a id="anc-ask" href= "./ask.html"><div class="btn-ask">Ask</div></a>
+                    <a id="anc-ask" href= "./signin.html"><div class="btn-ask">Ask</div></a>
                 </div>
             </div>
             <div class="right-content">
                 <div class="quest-header">Top Questions</div>
                 <div class="quest-container">
-                    <h2><a href="./question.html">Delete and EDIT API's using expressJS</a></h2>
+                    <h2><a href="./signin.html">Delete and EDIT API's using expressJS</a></h2>
                     <p>I created DELETE API and in the callback function i have written .remove function to delete a product if the id i have given is present.But when i am giving incorrect input, the result is receiving ...</p>
                 </div>
                 <div class="quest-container">
-                    <h2><a href="./question.html">Delete and EDIT API's using expressJS</a></h2>
+                    <h2><a href="./signin.html">Delete and EDIT API's using expressJS</a></h2>
                     <p>I created DELETE API and in the callback function i have written .remove function to delete a product if the id i have given is present.But when i am giving incorrect input, the result is receiving ...</p>
                 </div>
                 <div class="quest-container">
-                    <h2><a href="./question.html">Delete and EDIT API's using expressJS</a></h2>
+                    <h2><a href="./signin.html">Delete and EDIT API's using expressJS</a></h2>
                     <p>I created DELETE API and in the callback function i have written .remove function to delete a product if the id i have given is present.But when i am giving incorrect input, the result is receiving ...</p>
                 </div>
                 <div class="quest-container">
-                    <h2><a href="./question.html">Delete and EDIT API's using expressJS</a></h2>
+                    <h2><a href="./signin.html">Delete and EDIT API's using expressJS</a></h2>
                     <p>I created DELETE API and in the callback function i have written .remove function to delete a product if the id i have given is present.But when i am giving incorrect input, the result is receiving ...</p>
                 </div>
           
