--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,28 +18,32 @@
             <div id="logo-div"></div>
             <div id="app-name">Stack Overflow lite</div>
         </div>
+        <div class="log-bar">
+                <div class="user-log-bar">
+                    <i class="material-icons">account_circle</i>
+                    <div id="home-u-name">
+                            <a href="./profile.html">Tholle-mayer</a>
+                    </div>
+                </div>    
+        </div>
     </div>
     <div class="mini-top-bar">
         <div class="home">
-            <i class="material-icons">
-                <a href="./index.html">home</a>
-            </i>
         </div>
     </div>
     <div class="main-content">
         <div class="main-content-left">
+                <div class= "left-mini">
+                        <div class="public"><i class="material-icons">home</i></div>
+                        <a href="./home.html" class="active">Home</a>
+                </div>
             <div class="left-mini">
                 <div class="public">
                     <i class="material-icons">public</i>
                 </div>
                 <a href="./questions.html">StackOverflow</a>
             </div>
-            <div class="left-mini">
-                <div class="public">
-                    <i class="material-icons">person</i>
-                </div>
-                <a href="./profile.html">Profile</a>
-            </div>
+      
         </div>
         <div class="main-content-right">
             <div class="right-header">
