--- a/templates/question.html
+++ b/templates/question.html
@@ -18,34 +18,30 @@
             <div id="app-name">Stack Overflow lite</div>
         </div>
         <div class="log-bar">
-            <ul list-style-type="none">
-                <li>
-                    <a href="./signin.html">Sign in</a>
-                </li>
-                <li>
-                    <a href="./signup.html">Sign up</a>
-                </li>
-            </ul>
+                <div class="user-log-bar">
+                    <i class="material-icons">account_circle</i>
+                    <div id="home-u-name">
+                            <a href="./profile.html">Tholle-mayer</a>
+                    </div>
+                </div>    
         </div>
     </div>
     <div class="mini-top-bar">
-        <div class="home">
-            <i class="material-icons">
-                <a href="./index.html">home</a>
-            </i>
-        </div>
     </div>
     <div class="main-content">
             <div class="main-content-left">
                     <div class= "left-mini">
-                        <div class="public"><i class="material-icons">public</i></div>
-                        <a href= "./questions.html">StackOverflow</a>
+                            <div class="public"><i class="material-icons">home</i></div>
+                            <a href="./home.html" class="active">Home</a>
                     </div>
-                    <div class= "left-mini">
-                            <div class="public"><i class="material-icons">person</i></div>
-                            <a href= "./profile.html">Profile</a>
+                <div class="left-mini">
+                    <div class="public">
+                        <i class="material-icons">public</i>
                     </div>
-                </div> 
+                    <a href="./questions.html">StackOverflow</a>
+                </div>
+                
+            </div>
         <div class="main-content-right">
             <div class="right-header">
                 <form class="home-quest">
