--- a/templates/signin.html
+++ b/templates/signin.html
@@ -17,7 +17,16 @@
             <div id="logo-div"></div>
             <div id="app-name">Stack Overflow lite</div>
         </div>
-
+        <div class="log-bar">
+                <ul list-style-type="none">
+                    <li>
+                        <a href="./signin.html">Sign in</a>
+                    </li>
+                    <li>
+                        <a href="./signup.html">Sign up</a>
+                    </li>
+                </ul>
+            </div>
     </div>
     <div class= "mini-top-bar">
             <div class= "home">
@@ -29,13 +38,13 @@
         <div class="sign-in-header">Sign in</div>
         <form id="sign-in-form">
             <label for='Username'>Email</label>
-            <input type='email' id='email' name='email' placeholder="@gmail.com">
+            <input type='email' required id='email' name='email' placeholder="@gmail.com">
 
             <label for='Username'>Password</label>
-            <input type='password' id='password' name='password' placeholder="">
+            <input type='password' required id='password' name='password' placeholder="">
         </form>
         <div id='btn-container'>
-            <button id='sign-btn'>Sign in</button>
+                <a id="anc-ask" href= "./home.html"><button id='sign-btn'>Sign in</button></a>
         </div>
         <div class= "sign-note">
             <p>Do not have an account? Create an account <a href="./signup.html">here...</a> </p>
