--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,41 +17,57 @@
             <div id="logo-div"></div>
             <div id="app-name">Stack Overflow lite</div>
         </div>
+        <div class="log-bar">
+            <ul list-style-type="none">
+                <li>
+                    <a href="./signin.html">Sign in</a>
+                </li>
+                <li>
+                    <a href="./signup.html">Sign up</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class= "mini-top-bar">
-            <div class= "home">
-                    <i class="material-icons"><a href="./index.html">home</a></i>
-            </div>
+    <div class="mini-top-bar">
+        <div class="home">
+            <i class="material-icons">
+                <a href="./index.html">home</a>
+            </i>
+        </div>
     </div>
-    
+
     <div class="sign-out-content">
         <div class="sign-in-header">Sign up</div>
         <form id="sign-up-form">
-                <label for='Firstname'>First Name</label>
-                <input type='text' id='fname' name='fname' placeholder="Your first name...">
+            <label for='Firstname'>First Name</label>
+            <input type='text' required id='fname' name='fname' placeholder="Your first name...">
 
-                <label for='Lastname'>Last Name</label>
-                <input type='text' id='lname' name='lname' placeholder="Your last name...">
+            <label for='Lastname'>Last Name</label>
+            <input type='text' required id='lname' name='lname' placeholder="Your last name...">
 
-                <label for='Email'>Email</label>
-                <input type='email' id='email' name='email' placeholder="e.g JohnDoe@gmail.com">
+            <label for='Email'>Email</label>
+            <input type='email' required id='email' name='email' placeholder="e.g JohnDoe@gmail.com">
 
-                <label for='phoneNumber'>Phone</label>
-                <input type='number' id='phone-num' name='phone' placeholder="+234">
+            <label for='phoneNumber'>Phone</label>
+            <input type='number' required id='phone-num' name='phone' placeholder="+234">
 
-                <label for='password'>Password</label>
-                <input type='password' id='password' name='password' placeholder="">
+            <label for='password'>Password</label>
+            <input type='password' required id='password' name='password' placeholder="">
 
-                <label for='Confirm-password'>Confirm Password</label>
-                <input type='password' id='password' name='password' placeholder="">
-            </form>
-            <div id='btn-container'>
-            <button id='sign-btn' onclick="sayHello()">Submit</button>
-             </div>
-        <div class= "sign-note">
-            <p>Already have an account? <a href="./signin.html">Sign in</a> </p>
+            <label for='Confirm-password'>Confirm Password</label>
+            <input type='password' id='password' name='password' placeholder="">
+
+        </form>
+
+        <div id='btn-container'>
+                <a id="anc-ask" href= "./signin.html"><button id='sign-btn'>Sign up</button></a>
         </div>
-        
+        <div class="sign-note">
+            <p>Already have an account?
+                <a href="./signin.html">Sign in</a>
+            </p>
+        </div>
+
     </div>
 
 </body>
